--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -84,6 +84,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:drawable="@drawable/ic_dummy_app"
+                    app:text="@string/appearance"
+                    android:onClick="@{handler::onAppearanceClicked}"
+                    />
+                <org.torproject.vpn.ui.base.view.IconTextEntryView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:drawable="@drawable/ic_dummy_app"
                     app:text="@string/help"
                     app:secondaryText="lorem ipsum"
                     android:onClick="@{handler::onHelpClicked}"
