--- a/app/src/main/res/layout/fragment_appearancesettings.xml
+++ b/app/src/main/res/layout/fragment_appearancesettings.xml
@@ -50,6 +50,24 @@
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
+        <ImageView
+            android:id="@+id/iv_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:src="@{viewModel.backgroundImage}"
+            tools:src="@drawable/bg_stars"
+            tools:visibility="visible"
+            />
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,12 +98,17 @@
                     android:paddingHorizontal="@dimen/default_padding"
                     android:paddingVertical="@dimen/activity_vertical_margin"
                     android:text="@string/wallpaper"/>
-                <androidx.viewpager2.widget.ViewPager2
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_wallpapers"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:minHeight="300dp"
-                    android:id="@+id/vp_background"/>
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="@dimen/default_padding"
+                    android:orientation="horizontal"
+                    tools:listitem="@layout/wallpaper_view"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    />
+
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
