--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -54,7 +54,7 @@
 
 
         <ImageView
-            android:id="@+id/iv_background_with_stars"
+            android:id="@+id/iv_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:importantForAccessibility="no"
@@ -66,7 +66,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/bg_stars"
+            app:src="@{viewModel.backgroundImage}"
+            tools:src="@drawable/bg_stars"
             tools:visibility="visible" />
 
         <include
