--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_configureFragment_to_connectionFragment"
             app:destination="@id/connectionFragment" />
+        <action
+            android:id="@+id/action_configureFragment_to_helpFragment"
+            app:destination="@+id/helpFragment" />
     </fragment>
 
     <fragment
@@ -108,4 +111,10 @@
         tools:layout="@layout/fragment_bridgesettings"
         />
 
+    <fragment
+        android:id="@+id/helpFragment"
+        android:name="org.torproject.vpn.ui.help.HelpFragment"
+        android:label="HelpFragment"
+        tools:layout="@layout/fragment_help"
+        />
 </navigation>
