set background color in help pages also for the AppBarLayout, on some devices the action bar appears grey otherwise

--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
+            android:background="@color/purpleDark"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
             >
             <androidx.appcompat.widget.Toolbar
