hide offline help until we have the help pages content ready

--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -87,6 +87,7 @@
                     app:text="@string/help"
                     app:secondaryText="lorem ipsum"
                     android:onClick="@{handler::onHelpClicked}"
+                    android:visibility="gone"
                     />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </ScrollView>
