Fixes initialization of the layout of the on/off button. Fixes also the transition animation between different connectivity states. Adds text color animations so that the text of the button also smoothly changes on ConnectionState changes.

--- a/app/src/main/res/drawable/av_cancel_to_connect.xml
+++ b/app/src/main/res/drawable/av_cancel_to_connect.xml
@@ -32,8 +32,8 @@
                 <objectAnimator
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
-                    android:valueFrom="@color/emerald40"
-                    android:valueTo="@color/indigo60" />
+                    android:valueFrom="@color/indigo60"
+                    android:valueTo="@color/emerald40" />
             </set>
         </aapt:attr>
     </target>
