--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -134,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:background="@drawable/av_connect_to_cancel"
+                tools:background="@drawable/av_connect_to_cancel"
                 android:clickable="true"
                 android:elevation="0dp"
                 android:focusable="true"
@@ -142,7 +142,6 @@
                 android:onClick="@{()->viewModel.connectStateButtonClicked()}"
                 android:text="@{viewModel.connectButtonText}"
                 android:textAppearance="@style/button_text_connect"
-                android:textColor="@{viewModel.connectionState == ConnectionState.CONNECTING ? @android:color/white: @color/emerald80}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
