--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -58,6 +58,7 @@
 
     <color name="white_40">#66FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
 
     <color name="purple30">#C88BF2</color>
     <color name="purple40">#B86DE8</color>
