Transfer appearance screen to general settings screen. Remove Wallpaper selection and add a setting to control warning popups about circuits refresh.

--- a/app/src/main/res/drawable/app_item_background_selected.xml
+++ b/app/src/main/res/drawable/app_item_background_selected.xml
@@ -5,6 +5,9 @@
     >
     <solid android:color="@color/purpleDarkBackground"/>
     <corners android:radius="16dp"/>
+    <stroke android:color="@color/secondary"
+        android:width="2dp"
+        />
     <size android:width="72dp" android:height="72dp"/>
 
 </shape>
