--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,7 @@
     <color name="blue30">#81C2F2</color>
     <color name="blue30_16">#2981C2F2</color>
     <color name="blue20">#A8D8F8</color>
+    <color name="secondary">#C3F79A</color>
 
     <color name="emerald40">#5CD5A6</color>
     <color name="emerald80">#0F513B</color>
