--- a/app/src/main/res/layout/app_item_view.xml
+++ b/app/src/main/res/layout/app_item_view.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
       <variable name="viewModel" type="org.torproject.vpn.ui.approuting.model.AppItemModel"/>
    </data>
@@ -6,49 +7,49 @@
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       xmlns:tools="http://schemas.android.com/tools"
        android:paddingVertical="@dimen/compact_padding"
        android:paddingStart="0dp"
-       android:paddingEnd="12dp"
+       android:paddingEnd="6dp"
        >
 
       <androidx.appcompat.widget.AppCompatImageView
-          android:id="@+id/ivAppImage"
-          android:layout_width="60dp"
-          android:layout_height="60dp"
-          tools:src="@drawable/ic_dummy_app"
-          android:background="@drawable/app_item_background"
-          android:padding="10dp"
+          android:id="@+id/ivAppImageBackground"
+          android:layout_width="72dp"
+          android:layout_height="72dp"
+          android:src="@drawable/app_item_background"
+          android:padding="3dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          />
+         />
       <androidx.appcompat.widget.AppCompatImageView
-          android:id="@+id/ivSelectedIcn"
-          android:layout_width="20dp"
-          android:layout_height="20dp"
-          android:src="@drawable/ic_check_circle"
+          android:id="@+id/ivAppImage"
+          android:layout_width="48dp"
+          android:layout_height="48dp"
+          tools:src="@drawable/ic_dummy_app"
           android:background="@drawable/app_item_background"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintBottom_toBottomOf="@+id/ivAppImage"
-          android:layout_marginBottom="5dp"
-          android:layout_marginEnd="5dp"
-          android:visibility="gone"
+          app:layout_constraintTop_toTopOf="@id/ivAppImageBackground"
+          app:layout_constraintStart_toStartOf="@id/ivAppImageBackground"
+          app:layout_constraintEnd_toEndOf="@id/ivAppImageBackground"
+          app:layout_constraintBottom_toBottomOf="@id/ivAppImageBackground"
+
           />
+
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvAppTitle"
           style="@style/text_body_small"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
+          android:textFontWeight="600"
           android:maxLines="3"
           android:paddingTop="4dp"
           tools:text = "an app with a quite long title"
-          app:layout_constraintTop_toBottomOf="@id/ivAppImage"
+          app:layout_constraintTop_toBottomOf="@id/ivAppImageBackground"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintWidth_max="60dp"
-          />
+          app:layout_constraintWidth_max="72dp"
+          tools:targetApi="p" />
 
    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
