--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -61,14 +61,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-
+                <org.torproject.vpn.ui.base.view.IconTextEntryView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:drawable="@drawable/ic_configure"
+                    app:text="@string/general"
+                    app:secondaryText="@string/general_description"
+                    android:onClick="@{handler::onGeneralClicked}"
+                    />
                 <org.torproject.vpn.ui.base.view.IconTextEntryView
                     android:id="@+id/ite_apps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:drawable="@drawable/ic_apps"
                     app:text="@string/apps"
-                    app:secondaryText="@{viewModel.appProtectionLabel}"
+                    app:secondaryText="@string/apps_description"
                     android:onClick="@{handler::onAppsClicked}"
                     />
 
@@ -79,14 +86,6 @@
                     app:text="@string/connection"
                     app:secondaryText="@string/connection_description"
                     android:onClick="@{handler::onConnectionClicked}"
-                    />
-                <org.torproject.vpn.ui.base.view.IconTextEntryView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:drawable="@drawable/ic_dummy_app"
-                    app:text="@string/appearance"
-                    app:secondaryText="Lorem ipsum dolor sit amet"
-                    android:onClick="@{handler::onAppearanceClicked}"
                     />
                 <org.torproject.vpn.ui.base.view.IconTextEntryView
                     android:layout_width="match_parent"
