--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -66,8 +66,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:src="@{viewModel.backgroundImage}"
-            tools:src="@drawable/bg_stars"
+            android:src="@drawable/bg_onion_puks"
+            tools:src="@drawable/bg_onion_puks"
             tools:visibility="visible" />
 
         <include
