--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,7 @@
             app:destination="@id/connectionFragment" />
         <action
             android:id="@+id/action_configureFragment_to_appearanceFragment"
-            app:destination="@id/appearanceFragment" />
+            app:destination="@id/generalFragment" />
         <action
             android:id="@+id/action_configureFragment_to_helpFragment"
             app:destination="@+id/helpFragment" />
@@ -62,10 +62,10 @@
             app:destination="@id/bridgeSettingsFragment" />
     </fragment>
     <fragment
-        android:id="@+id/appearanceFragment"
-        android:label="AppearanceFragment"
-        android:name="org.torproject.vpn.ui.appearancesettings.AppearanceSettingsFragment"
-        tools:layout="@layout/fragment_appearancesettings"/>
+        android:id="@+id/generalFragment"
+        android:label="GeneralFragment"
+        android:name="org.torproject.vpn.ui.generalsettings.GeneralSettingsFragment"
+        tools:layout="@layout/fragment_generalsettings"/>
     <fragment
         android:id="@+id/loggingFragment"
         android:name="org.torproject.vpn.ui.logging.LoggingFragment"
