--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,11 +67,12 @@
 
     <color name="red30">#F27E91</color>
     <color name="red80">#75101A</color>
-
-
-
-
-
-
+    <color name="primary">#D697F8</color>
+    <color name="outline">#5A4CD3</color>
+    <color name="surface_container">#4638AE</color>
+    <color name="surface_container_low">#32277F</color>
+    <color name="on_surface">#FFFFFF</color>
+    <color name="on_surface_variant">#CCCCFF</color>
+    <color name="inverse_on_surface">#181F2F</color>
 
 </resources>
