--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/action_connect" />
 
     <item
+        android:id="@+id/navigation_help"
+        android:icon="@drawable/selector_bottom_nav_help"
+        android:title="@string/help" />
+
+    <item
         android:id="@+id/configure_fragment"
         android:icon="@drawable/select_bottom_nav_config"
         android:title="@string/action_configure" />
