implement new help menu

--- a/app/src/main/res/drawable/select_bottom_nav_config.xml
+++ b/app/src/main/res/drawable/select_bottom_nav_config.xml
@@ -3,7 +3,9 @@
     <item android:state_checked="false">
         <layer-list>
             <item android:width="60dp"
-                android:height="28dp">
+                android:height="28dp"
+                android:bottom="4dp"
+                >
                 <aapt:attr name="android:drawable">
                     <vector android:width="60dp"
                         android:height="28dp"
@@ -17,6 +19,7 @@
             <item android:width="24dp"
                 android:height="24dp"
                 android:gravity="center"
+                android:bottom="4dp"
                 >
                 <aapt:attr name="android:drawable">
                     <vector xmlns:android="http://schemas.android.com/apk/res/android"
@@ -47,19 +50,23 @@
     </item>
     <item android:state_checked="true">
         <layer-list>
-            <item android:width="60dp" android:height="28dp">
+            <item android:width="60dp"
+                android:height="28dp"
+                android:bottom="4dp"
+                >
                 <aapt:attr name="android:drawable">
                     <vector android:width="60dp" android:height="28dp" android:viewportWidth="60" android:viewportHeight="28">
-                        <path android:fillColor="@color/indigo50" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
+                        <path android:fillColor="@color/surface_container_low" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
                     </vector>
                 </aapt:attr>
             </item>
             <item android:width="24dp"
                 android:height="24dp"
                 android:gravity="center"
+                android:bottom="4dp"
                 >
                 <aapt:attr name="android:drawable">
-                    <vector xmlns:android="http://schemas.android.com/apk/res/android"
+                    <vector
                         android:width="24dp"
                         android:height="24dp"
                         android:viewportWidth="24"
