--- a/app/src/main/res/drawable/selector_bottom_nav_connect.xml
+++ b/app/src/main/res/drawable/selector_bottom_nav_connect.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt">
     <item android:state_checked="false">
         <layer-list>
-            <item android:height="28dp" android:width="60dp">
+            <item android:height="28dp"
+                android:width="60dp"
+                android:bottom="4dp"
+                >
                 <aapt:attr name="android:drawable">
                     <vector android:width="60dp" android:height="28dp" android:viewportWidth="60" android:viewportHeight="28">
                         <path android:fillColor="@color/indigo60" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
@@ -13,6 +16,7 @@
                 android:width="24dp"
                 android:height="24dp"
                 android:gravity="center"
+                android:bottom="4dp"
                 >
                 <aapt:attr name="android:drawable">
 
@@ -35,10 +39,13 @@
     </item>
     <item android:state_checked="true">
         <layer-list>
-            <item android:width="60dp" android:height="28dp">
+            <item android:width="60dp"
+                android:height="28dp"
+                android:bottom="4dp"
+                >
                 <aapt:attr name="android:drawable">
                     <vector android:width="60dp" android:height="28dp" android:viewportWidth="60" android:viewportHeight="28">
-                        <path android:fillColor="@color/indigo50" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
+                        <path android:fillColor="@color/surface_container_low" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
                     </vector>
                 </aapt:attr>
             </item>
@@ -46,6 +53,7 @@
                 android:width="24dp"
                 android:height="24dp"
                 android:gravity="center"
+                android:bottom="4dp"
                 >
                 <aapt:attr name="android:drawable">
                     <vector
